# Py_Game

./: .gitignore  CONTRIBUTING.md  Escape the Rogue AI  Escape the Rogue AI.py  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/escape_rogue_ai/: __init__.py  __main__.py  data.py  game.py
tests/: test_game.py
